Final 1st Release

--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,7 @@ title=Burstnation Explorer
 # Official Wallet for redirect links
 officialWallet=https://wallet.burstcoin.ro
 # Wallet address for Burst Explorer
-wallet=https://wallet.burstcoin.ro
+wallet=http://localhost:8125
 # Genesis time
 timeSeed=1407722400
 # Block reward lifetime in blocks
